Create a UPROXY_VERSION variable to reference
This creates a new file, version.js, which is referenced in both the
core and the ui and contains the version information of relevant
libraries at the time of building the app.  This variable will be logged
when the core first loads and will be accessible from either the core or
the UI.

--- a/src/chrome/extension/manifest.json
+++ b/src/chrome/extension/manifest.json
@@ -18,7 +18,8 @@
       "scripts/core_connector.js",
       "scripts/chrome_tab_auth.js",
       "scripts/chrome_core_connector.js",
-      "scripts/background.js"
+      "scripts/background.js",
+      "scripts/version.js"
     ]
   },
   "browser_action": {
