--- a/bower.json
+++ b/bower.json
@@ -7,9 +7,7 @@
     "core-input": "Polymer/core-input#^0.5.0",
     "core-style": "Polymer/core-style#^0.5.0",
     "core-icons": "Polymer/core-icons#~0.5.1",
-    "core-signals": "Polymer/core-signals#~0.5.5"
-  },
-  "devDependencies": {
+    "core-signals": "Polymer/core-signals#~0.5.5",
     "paper-dialog": "Polymer/paper-dialog#~0.5.5"
   }
 }
