--- a/bower.json
+++ b/bower.json
@@ -8,6 +8,7 @@
     "core-style": "Polymer/core-style#^0.5.0",
     "core-icons": "Polymer/core-icons#~0.5.1",
     "core-signals": "Polymer/core-signals#~0.5.5",
-    "paper-dialog": "Polymer/paper-dialog#~0.5.5"
+    "paper-dialog": "Polymer/paper-dialog#~0.5.5",
+    "core-label": "Polymer/core-label#~0.5.5"
   }
 }
