add 'view logs' tooltip

--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,7 @@
     "core-icons": "Polymer/core-icons#~0.5.1",
     "core-signals": "Polymer/core-signals#~0.5.5",
     "paper-dialog": "Polymer/paper-dialog#~0.5.5",
-    "core-label": "Polymer/core-label#~0.5.5"
+    "core-label": "Polymer/core-label#~0.5.5",
+    "core-tooltip": "Polymer/core-tooltip#~0.5.5"
   }
 }
