--- a/src/chrome/extension/manifest.json
+++ b/src/chrome/extension/manifest.json
@@ -39,6 +39,9 @@
     "https://uproxy.org/offer/*",
     "webRequestBlocking"
   ],
+  "web_accessible_resources": [
+    "copypaste.html"
+  ],
   "options_page": "index.html",
   "externally_connectable": {
     "ids" : ["fmdppkkepalnkeommjadgbhiohihdhii"],
