--- a/src/firefox/package.json
+++ b/src/firefox/package.json
@@ -7,7 +7,6 @@
   "license": "MPL 2.0",
   "version": "0.1",
   "permissions": {
-    "private-browsing": true,
-    "unsafe-content-script": true
+    "private-browsing": true
   }
 }
