--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "freedom-social-firebase": "^0.0.2",
     "freedom-social-xmpp": "~0.3.6",
     "fs-extra": "^0.12.0",
-    "grunt": "0.4.2",
+    "grunt": "~0.4.2",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-connect": "~0.7.1",
