--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     }
   ],
   "devDependencies": {
+    "arraybuffer-slice": "^0.1.2",
+    "browserify-istanbul": "^0.1.3",
     "es6-promise": "^0.1.1",
     "freedom-for-chrome": "~0.4.11",
     "freedom-for-firefox": "~0.6.7",
@@ -24,6 +26,7 @@
     "freedom-social-xmpp": "~0.3.6",
     "fs-extra": "^0.12.0",
     "grunt": "~0.4.2",
+    "grunt-browserify": "^3.3.1",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-connect": "~0.7.1",
@@ -34,18 +37,18 @@
     "grunt-contrib-watch": "~0.5.3",
     "grunt-contrib-yuidoc": "~0.4.0",
     "grunt-gitinfo": "^0.1.7",
+    "grunt-jasmine-chromeapp": "git://github.com/uproxy/grunt-jasmine-chromeapp",
     "grunt-mozilla-addon-sdk": "^0.4.0",
     "grunt-remove": "^0.1.0",
     "grunt-shell": "~0.3.1",
     "grunt-string-replace": "^1.0.0",
     "grunt-template-jasmine-istanbul": "^0.3.0",
-    "grunt-ts": "^1.11",
+    "grunt-ts": "^3.00",
     "grunt-verbosity": "^0.2.2",
     "grunt-vulcanize": "^0.6.0",
-    "typescript": "^1.0.1",
-    "uproxy-churn": "^0.0.5",
-    "uproxy-lib": "^19.0.0",
-    "uproxy-networking": "^6.0.0"
+    "typescript": "^1.4.1",
+    "uproxy-lib": "^21.0.0",
+    "uproxy-networking": "^7.0.0"
   },
   "peerDependencies": {
     "freedom": "~0.6.18"
