--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "uProxy",
   "description": "Share your pathway to the Internet",
-  "version": "0.6.1",
+  "version": "0.7.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/uproxy/uproxy"
@@ -39,19 +39,17 @@
     "grunt-gitinfo": "^0.1.7",
     "grunt-jasmine-chromeapp": "git://github.com/uproxy/grunt-jasmine-chromeapp",
     "grunt-mozilla-addon-sdk": "^0.4.0",
-    "grunt-remove": "^0.1.0",
-    "grunt-shell": "~0.3.1",
     "grunt-string-replace": "^1.0.0",
     "grunt-template-jasmine-istanbul": "^0.3.0",
-    "grunt-ts": "^3.00",
+    "grunt-ts": "^4.0.0",
     "grunt-verbosity": "^0.2.2",
     "grunt-vulcanize": "^0.6.0",
-    "typescript": "^1.4.1",
-    "uproxy-lib": "^21.0.0",
-    "uproxy-networking": "^7.0.0"
+    "typescript": "^1.0.1",
+    "uproxy-lib": "^19.0.0",
+    "uproxy-networking": "^6.0.0"
   },
   "peerDependencies": {
-    "freedom": "~0.6.18"
+    "freedom": "^0.6.18"
   },
   "private": true
 }
