--- a/package.json
+++ b/package.json
@@ -17,36 +17,26 @@
     }
   ],
   "devDependencies": {
-    "arraybuffer-slice": "^0.1.2",
-    "browserify-istanbul": "^0.1.3",
-    "es6-promise": "^0.1.1",
-    "freedom-for-chrome": "~0.4.11",
-    "freedom-for-firefox": "~0.6.7",
+    "es6-promise": "^2.0.0",
+    "freedom-for-chrome": "^0.4.11",
+    "freedom-for-firefox": "^0.6.7",
     "freedom-social-firebase": "^0.0.2",
-    "freedom-social-xmpp": "~0.3.6",
-    "fs-extra": "^0.12.0",
-    "grunt": "~0.4.2",
-    "grunt-browserify": "^3.3.1",
-    "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-connect": "~0.7.1",
-    "grunt-contrib-copy": "~0.4.1",
-    "grunt-contrib-jasmine": "~0.6.1",
-    "grunt-contrib-symlink": "~0.3.0",
-    "grunt-contrib-uglify": "~0.2.2",
-    "grunt-contrib-watch": "~0.5.3",
-    "grunt-contrib-yuidoc": "~0.4.0",
+    "freedom-social-xmpp": "^0.3.6",
+    "grunt": "^0.4.2",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-concat": "^0.5.0",
+    "grunt-contrib-copy": "^0.8.0",
+    "grunt-contrib-jasmine": "^0.8.0",
     "grunt-gitinfo": "^0.1.7",
-    "grunt-jasmine-chromeapp": "git://github.com/uproxy/grunt-jasmine-chromeapp",
     "grunt-mozilla-addon-sdk": "^0.4.0",
     "grunt-string-replace": "^1.0.0",
     "grunt-template-jasmine-istanbul": "^0.3.0",
     "grunt-ts": "^4.0.0",
     "grunt-verbosity": "^0.2.2",
     "grunt-vulcanize": "^0.6.0",
-    "typescript": "^1.0.1",
-    "uproxy-lib": "^19.0.0",
-    "uproxy-networking": "^6.0.0"
+    "tsd": "^0.5.7",
+    "uproxy-lib": "^21.0.0",
+    "uproxy-networking": "^7.0.0"
   },
   "peerDependencies": {
     "freedom": "^0.6.18"
