--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
     "core-header-panel": "Polymer/core-header-panel#~0.5.5",
     "core-drawer-panel": "Polymer/core-drawer-panel#~0.5.5",
     "core-overlay": "Polymer/core-overlay#~0.5.5",
-    "lodash": "~3.6.0"
+    "lodash": "~3.6.0",
+    "paper-toast": "Polymer/paper-toast#~0.5.5"
   }
 }
