--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "freedom-social-firebase": "^0.0.2",
     "freedom-social-xmpp": "^0.3.6",
     "grunt": "^0.4.2",
+    "grunt-browserify": "^3.3.1",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-concat": "^0.5.0",
     "grunt-contrib-copy": "^0.8.0",
