Finish Firefox requireification
Firefox builds now and tests fine, viewing logs will not work yet,
however, that should not be too hard to address.

Side note: lodash is now pulled in as an npm package instead of a bower
package.

--- a/src/chrome/extension/manifest.json
+++ b/src/chrome/extension/manifest.json
@@ -11,8 +11,7 @@
   "background": {
     "persistent": true,
     "scripts": [
-      "scripts/background.static.js",
-      "scripts/lodash.min.js"
+      "scripts/background.static.js"
     ]
   },
   "browser_action": {
