--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,9 @@
 language: node_js
 node_js:
-  - "0.11"
   - "0.10"
 before_install:
-  - npm install grunt -g grunt-cli
-  - npm install -g bower
-  - bower install
+  - npm install -g grunt-cli bower
+install:
+  - ./setup.sh install
 script:
-  - grunt test --verbose
+  - grunt test
