--- a/src/firefox/package.json
+++ b/src/firefox/package.json
@@ -2,7 +2,7 @@
   "name": "uproxy",
   "title": "uProxy",
   "id": "jid1-DhGl7eIwcjxVEQ",
-  "description": "Ubiquitous Proxy [Alpha]",
+  "description": "uProxy Alpha version for Firefox.",
   "author": "",
   "license": "MPL 2.0",
   "version": "0.8.0",
