--- a/src/firefox/package.json
+++ b/src/firefox/package.json
@@ -5,7 +5,7 @@
   "description": "uProxy",
   "author": "uProxy Team <info@uproxy.org>",
   "license": "Apache 2.0",
-  "version": "0.8.3-dev",
+  "version": "0.8.3",
   "permissions": {
     "private-browsing": true
   }
