--- a/src/firefox/package.json
+++ b/src/firefox/package.json
@@ -1,11 +1,11 @@
 {
   "name": "uproxy-firefox",
-  "title": "uProxy Beta",
+  "title": "uProxy Alpha",
   "id": "jid1-uTe1Bgrsb76jSA",
-  "description": "uProxy",
+  "description": "This is the alpha version of uProxy.",
   "author": "uProxy Team <info@uproxy.org>",
   "license": "Apache 2.0",
-  "version": "0.8.3",
+  "version": "0.8.4",
   "permissions": {
     "private-browsing": true
   }
