Reporting metrics to cloudfronted site

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "arraybuffer-slice": "^0.1.2",
     "bower": "^1.4.1",
     "es6-promise": "^2.0.0",
+    "freedomjs-anonymized-metrics": "~0.1.0",
     "freedom-for-chrome": "^0.4.11",
     "freedom-for-firefox": "0.6.10",
     "freedom-social-firebase": "^0.0.12",
