--- a/package.json
+++ b/package.json
@@ -54,5 +54,9 @@
   "scripts": {
     "install": "./node_modules/.bin/bower install"
   },
-  "private": true
+  "private": true,
+  "dependencies": {
+    "i18next": "^1.7.10",
+    "xregexp": "^2.0.0"
+  }
 }
