--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "circular-json": "^0.1.6",
     "crypto": "^0.0.3",
     "es6-promise": "^2.0.0",
-    "freedomjs-anonymized-metrics": "~0.1.0",
     "freedom-for-chrome": "^0.4.11",
     "freedom-for-firefox": "0.6.10",
     "freedom-social-firebase": "^0.0.12",
     "freedom-social-xmpp": "^0.3.6",
+    "freedomjs-anonymized-metrics": "~0.1.0",
     "fs-extra": "^0.12.0",
     "grunt": "^0.4.2",
     "grunt-browserify": "^3.3.1",
@@ -41,12 +41,14 @@
     "grunt-ts": "^4.0.0",
     "grunt-verbosity": "^0.2.2",
     "grunt-vulcanize": "^0.6.0",
+    "i18next-client": "^1.8.2",
     "ipaddr.js": "^0.1.3",
     "lodash": "^3.7.0",
     "regex2dfa": "^0.1.6",
     "tsd": "^0.5.7",
     "uproxy-lib": "^26.0.0",
-    "utransformers": "^0.2.1"
+    "utransformers": "^0.2.1",
+    "xregexp": "^2.0.0"
   },
   "peerDependencies": {
     "freedom": "^0.6.18"
@@ -54,9 +56,5 @@
   "scripts": {
     "install": "./node_modules/.bin/bower install"
   },
-  "private": true,
-  "dependencies": {
-    "i18next": "^1.7.10",
-    "xregexp": "^2.0.0"
-  }
+  "private": true
 }
