--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "core-header-panel": "Polymer/core-header-panel#^0.5.6",
     "core-drawer-panel": "Polymer/core-drawer-panel#^0.5.6",
     "core-overlay": "Polymer/core-overlay#^0.5.6",
-    "paper-toast": "Polymer/paper-toast#^0.5.6"
+    "paper-toast": "Polymer/paper-toast#^0.5.6",
+    "paper-dropdown": "Polymer/paper-dropdown#~0.5.6"
   },
   "resolutions": {
     "webcomponentsjs": "^0.6.1"
