--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "lodash": "^3.7.0",
     "regex2dfa": "^0.1.6",
     "tsd": "^0.5.7",
-    "uproxy-lib": "^27.2.0",
+    "uproxy-lib": "27.2.0",
     "utransformers": "^0.2.1",
     "xregexp": "^2.0.0"
   },
