UPnP, PMP, PCP probing for a list of popular router IPs

--- a/src/chrome/app/manifest.json
+++ b/src/chrome/app/manifest.json
@@ -14,7 +14,8 @@
     }
   },
   "permissions": [
-    "storage"
+    "storage",
+    "http://*/"
   ],
   "sockets": {
     "tcp": { "connect" : "" },
