Make the setup.sh script more robust
This changes the setup.sh script so that we will pass a -f command to rm
in clean (this avoids a failure error code if it is run twice) and
forces us to use the local versions of both bower and grunt giving us
better control over those packages if neded.

This also removes automatically running bower after doing npm install
since the user should, in theory, never run that directly.

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "fs-extra": "^0.12.0",
     "grunt": "^0.4.2",
     "grunt-browserify": "^3.3.1",
+    "grunt-cli": "^0.1.13",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-copy": "^0.8.0",
     "grunt-contrib-jasmine": "^0.8.0",
@@ -52,9 +53,6 @@
   },
   "peerDependencies": {
     "freedom": "^0.6.18"
-  },
-  "scripts": {
-    "install": "./node_modules/.bin/bower install"
   },
   "private": true
 }
