--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "arraybuffer-slice": "^0.1.2",
     "bower": "^1.4.1",
     "circular-json": "^0.1.6",
+    "compare-version": "^0.1.2",
     "crypto": "^0.0.3",
     "es6-promise": "^2.0.0",
     "freedom-for-chrome": "^0.4.11",
