initial commit to use new github social provider

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "freedom-for-firefox": "^0.6.13",
     "freedom-social-firebase": "^1.0.1",
     "freedom-social-xmpp": "^0.4.0",
+    "freedom-social-github": "git://github.com/freedomjs/freedom-social-github#iislucas",
     "freedomjs-anonymized-metrics": "~0.1.0",
     "fs-extra": "^0.12.0",
     "grunt": "^0.4.2",
@@ -39,6 +40,7 @@
     "grunt-jasmine-chromeapp": "git://github.com/uproxy/grunt-jasmine-chromeapp",
     "grunt-mozilla-addon-sdk": "^0.4.0",
     "grunt-string-replace": "^1.0.0",
+    "grunt-subgrunt": "^0.4.5",
     "grunt-template-jasmine-istanbul": "^0.3.0",
     "grunt-ts": "~4.1.0",
     "grunt-verbosity": "^0.2.2",
