--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "freedom-for-firefox": "^0.6.13",
     "freedom-social-firebase": "^1.0.1",
     "freedom-social-xmpp": "^0.4.0",
-    "freedom-social-github": "git://github.com/freedomjs/freedom-social-github#iislucas",
+    "freedom-social-github": "git://github.com/freedomjs/freedom-social-github",
     "freedomjs-anonymized-metrics": "~0.1.0",
     "fs-extra": "^0.12.0",
     "grunt": "^0.4.2",
